opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/mew_vi"
bug-reports: "https://github.com/kandu/mew_vi/issues"
license: "MIT"
dev-repo: "git+https://github.com/kandu/mew_vi.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & (ocaml:version >= "4.04.0")}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "camomile"
  "mew"
  "dune" {build}
  "ppx_expect" {with-test}
]

synopsis: "Modal editing witch, VI interpreter"
description: """
"""
